# hydra-c2

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
.claude/agents/harness/: harness-orchestrator.md
.claude/agents/intelligence/: osint-analyst.md
.claude/agents/nexus/: mdo-fusion-agent.md
.claude/agents/ooda/: ooda-cycle-agent.md
.harness/: pipeline.yaml
assets/: index-BW8AhuVV.js  index-BYi477Oq.js  index-C_y2Ewtg.css  index-D9zBDQoG.js  index-DT5yyBjm.js  index-Dd_mZZEb.css
deploy/docker/: Dockerfile.api  docker-compose.yml
deploy/docker/mosquitto/: mosquitto.conf
docs/: DESIGN_PHILOSOPHY.md  HYDRA-C2_RPD_v2.0.md  synergy-evaluation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/layout/: ConnectionBanner.tsx  LayerToggle.tsx  Sidebar.tsx
frontend/src/components/map/: ActorMarker.tsx  ActorTrail.tsx  CopMap.tsx  DmzOverlay.tsx  ScanlineOverlay.tsx  StrategicZonesOverlay.tsx  ThreatOverlays.tsx
frontend/src/components/panels/: ActorPanel.tsx  SystemHealth.tsx
frontend/src/config/: api.ts
frontend/src/lib/: milsymbol.ts
frontend/src/store/: actorStore.ts
frontend/src/types/: index.ts
scripts/: seed.sql  seed_data.py  seed_enhanced.sql
src/: __init__.py
src/hydra_c2/: config.py  container.py  standalone.py
src/hydra_c2/application/: __init__.py
src/hydra_c2/application/dto/: __init__.py
src/hydra_c2/application/services/: __init__.py
src/hydra_c2/application/use_cases/: __init__.py  check_geofence.py  ingest_cot.py  ingest_sdr.py  query_network.py  triangulate_source.py
src/hydra_c2/domain/: __init__.py
src/hydra_c2/domain/entities/: __init__.py  actor.py  event.py
src/hydra_c2/domain/interfaces/: __init__.py  messaging.py  repositories.py
src/hydra_c2/domain/value-objects/: __init__.py
src/hydra_c2/infrastructure/: __init__.py
src/hydra_c2/infrastructure/analytics/: __init__.py
src/hydra_c2/infrastructure/harness/: __init__.py
src/hydra_c2/infrastructure/intelligence/: __init__.py
src/hydra_c2/infrastructure/mesh/: __init__.py
src/hydra_c2/infrastructure/messaging/: __init__.py
src/hydra_c2/infrastructure/ooda/: __init__.py
src/hydra_c2/infrastructure/persistence/: __init__.py
src/hydra_c2/infrastructure/sdr/: __init__.py
src/hydra_c2/presentation/: __init__.py
src/hydra_c2/presentation/web/: __init__.py
tests/: __init__.py
tests/unit/: __init__.py  test_actor.py
(+27 files in other folders)
